Update linjeskift i ex2.tex

--- a/incl/main/ex2.tex
+++ b/incl/main/ex2.tex
@@ -5,7 +5,7 @@ Vestibulum finibus nibh et erat accumsan pulvinar.
 Curabitur pretium gravida felis, quis ullamcorper ante varius a.
 Maecenas leo enim, blandit vel pulvinar id, venenatis id libero.
 Mauris lobortis metus sed venenatis pretium.
-Proin et elit justo.
+Proin et elit justo. \\
 Maecenas varius sodales sem, a euismod sem rutrum a.
 Aliquam tincidunt massa in lorem consectetur molestie.
 Pellentesque aliquet malesuada orci, a pharetra nunc posuere ac.
