--- a/incl/misc/abstract.tex
+++ b/incl/misc/abstract.tex
@@ -1,3 +1,3 @@
-This is an example of an \emph{abstract}, which is a brief summary of the document in which it is presented.
+This is an example of an \emph{abstract}, which is a brief summary of the document in which it is presented. men det er pis
 It is also sometimes known as a \emph{précis} or \emph{synopsis}.
 This document itself presents no interesting content and should be taken purely as example data for practising Git commands.
